--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
-    url: jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+    url: jdbc:postgresql://localhost:5400/FMH_DB
     driverClassName: org.postgresql.Driver
-    username: ${DB_USER}
-    password: ${DB_PASS}
+    username: postgres
+    password: 123
     platform: postgres
   jpa:
     open-in-view: false
@@ -23,4 +23,4 @@ server:
 logging.level.ru.iteco.fmh: debug
 
 swagger:
-  host: ${SWAGGER_HOST}
+  host: localhost
